--- a/ts-paint/angular.json
+++ b/ts-paint/angular.json
@@ -30,6 +30,11 @@
             "styles": [
               "src/styles.less"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/"
+              ]
+            },
             "scripts": []
           },
           "configurations": {
