--- a/ts-paint/package.json
+++ b/ts-paint/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
     "rxjs": "~6.5.4",
+    "rxjs-observable-store": "^2.0.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
