--- a/ts-paint/package.json
+++ b/ts-paint/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~9.1.1",
     "rxjs": "~6.5.4",
     "rxjs-observable-store": "^2.0.4",
+    "ts-toolbelt": "^6.6.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
