Configured deploy to GitHub pages

--- a/ts-paint/angular.json
+++ b/ts-paint/angular.json
@@ -126,6 +126,10 @@
               "devServerTarget": "ts-paint:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
     }
