--- a/ts-paint/package.json
+++ b/ts-paint/package.json
@@ -44,6 +44,7 @@
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
+    "tslint-consistent-codestyle": "^1.16.0",
     "typescript": "~3.8.3"
   }
 }
