--- a/ts-paint/tsconfig.json
+++ b/ts-paint/tsconfig.json
@@ -10,6 +10,7 @@
     "module": "esnext",
     "moduleResolution": "node",
     "importHelpers": true,
+    "noUnusedLocals": true,
     "target": "es2015",
     "lib": [
       "es2018",
